Make MVBTreeDemo platform independent